@@ -433,12 +433,12 @@ bool
 find_and_go_to_working_copy(system_path const & search_root)
 {
   // unimplemented
-  fs::path root = search_root.as_external();
-  fs::path bookdir = bookkeeping_root.as_external();
-  fs::path current = fs::initial_path();
+  fs::path root(search_root.as_external(), fs::native);
+  fs::path bookdir(bookkeeping_root.as_external(), fs::native);
+  fs::path current(fs::initial_path());
   fs::path removed;
   fs::path check = current / bookdir;
-  
+
   L(F("searching for '%s' directory with root '%s'\n") 
     % bookdir.string()
     % root.string());
